--- a/Grapher/Grapher/imgui.ini
+++ b/Grapher/Grapher/imgui.ini
@@ -5,8 +5,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=842,283
-Size=438,437
+Pos=1545,415
+Size=375,594
 Collapsed=0
 DockId=0x00000004,0
 
@@ -16,21 +16,21 @@ Size=1280,720
 Collapsed=0
 
 [Window][Menu]
-Pos=842,0
-Size=438,281
+Pos=905,0
+Size=375,720
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][RenderWindow]
 Pos=0,0
-Size=840,720
+Size=903,720
 Collapsed=0
 DockId=0x00000002,0
 
 [Docking][Data]
 DockSpace     ID=0x7F00F5A9 Window=0x9A404470 Pos=200,100 Size=1280,720 Split=X
-  DockNode    ID=0x00000002 Parent=0x7F00F5A9 SizeRef=1480,545 CentralNode=1 HiddenTabBar=1 Selected=0x460AEED4
-  DockNode    ID=0x00000003 Parent=0x7F00F5A9 SizeRef=438,545 Split=Y Selected=0xE87781F4
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=468,394 Selected=0xA57AB2C6
-    DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=468,613 Selected=0xE87781F4
+  DockNode    ID=0x00000002 Parent=0x7F00F5A9 SizeRef=1543,545 CentralNode=1 HiddenTabBar=1 Selected=0x460AEED4
+  DockNode    ID=0x00000003 Parent=0x7F00F5A9 SizeRef=375,545 Split=Y Selected=0xA57AB2C6
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=426,413 Selected=0xA57AB2C6
+    DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=426,594 Selected=0xE87781F4
 
