--- a/Grapher/Grapher/imgui.ini
+++ b/Grapher/Grapher/imgui.ini
@@ -11,24 +11,24 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][DockSpace]
-Pos=0,0
+Pos=-32200,-32100
 Size=1280,720
 Collapsed=0
 
 [Window][Menu]
-Pos=905,0
+Pos=-31295,-32100
 Size=375,720
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][RenderWindow]
-Pos=0,0
+Pos=-32200,-32100
 Size=903,720
 Collapsed=0
 DockId=0x00000002,0
 
 [Docking][Data]
-DockSpace     ID=0x7F00F5A9 Window=0x9A404470 Pos=200,100 Size=1280,720 Split=X
+DockSpace     ID=0x7F00F5A9 Window=0x9A404470 Pos=-32000,-32000 Size=1280,720 Split=X
   DockNode    ID=0x00000002 Parent=0x7F00F5A9 SizeRef=1543,545 CentralNode=1 HiddenTabBar=1 Selected=0x460AEED4
   DockNode    ID=0x00000003 Parent=0x7F00F5A9 SizeRef=375,545 Split=Y Selected=0xA57AB2C6
     DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=426,413 Selected=0xA57AB2C6
