Draw graph of parametric functions

--- a/Grapher/Grapher/imgui.ini
+++ b/Grapher/Grapher/imgui.ini
@@ -1,36 +1,44 @@
 [Window][Debug##Default]
-ViewportPos=1701,564
+ViewportPos=1703,506
 ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1545,415
-Size=375,594
+Pos=1287,415
+Size=633,594
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][DockSpace]
-Pos=-32200,-32100
+Pos=0,0
 Size=1280,720
 Collapsed=0
 
 [Window][Menu]
-Pos=-31295,-32100
-Size=375,720
+Pos=906,0
+Size=374,327
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000005,0
 
 [Window][RenderWindow]
-Pos=-32200,-32100
-Size=903,720
+Pos=0,0
+Size=904,720
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][Renderer3D]
+Pos=906,329
+Size=374,391
+Collapsed=0
+DockId=0x00000006,0
+
 [Docking][Data]
-DockSpace     ID=0x7F00F5A9 Window=0x9A404470 Pos=-32000,-32000 Size=1280,720 Split=X
-  DockNode    ID=0x00000002 Parent=0x7F00F5A9 SizeRef=1543,545 CentralNode=1 HiddenTabBar=1 Selected=0x460AEED4
-  DockNode    ID=0x00000003 Parent=0x7F00F5A9 SizeRef=375,545 Split=Y Selected=0xA57AB2C6
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=426,413 Selected=0xA57AB2C6
-    DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=426,594 Selected=0xE87781F4
+DockSpace       ID=0x7F00F5A9 Window=0x9A404470 Pos=200,100 Size=1280,720 Split=X
+  DockNode      ID=0x00000002 Parent=0x7F00F5A9 SizeRef=1544,545 CentralNode=1 HiddenTabBar=1 Selected=0x460AEED4
+  DockNode      ID=0x00000003 Parent=0x7F00F5A9 SizeRef=374,545 Split=Y Selected=0xA57AB2C6
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=426,413 Split=Y Selected=0xA57AB2C6
+      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=375,327 Selected=0xA57AB2C6
+      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=375,391 Selected=0xA8145D62
+    DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=426,594 Selected=0xE87781F4
 
