--- a/Grapher/Grapher/imgui.ini
+++ b/Grapher/Grapher/imgui.ini
@@ -1,44 +1,43 @@
 [Window][Debug##Default]
-ViewportPos=1703,506
-ViewportId=0x9F5F46A1
+Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Dear ImGui Demo]
-Pos=1287,415
-Size=633,594
+[Window][DockSpace]
+Pos=0,0
+Size=1920,1009
+Collapsed=0
+
+[Window][Renderer 2D]
+Pos=1573,437
+Size=347,572
 Collapsed=0
 DockId=0x00000004,0
 
-[Window][DockSpace]
-Pos=0,0
-Size=1280,720
-Collapsed=0
-
 [Window][Menu]
-Pos=906,0
-Size=374,327
+Pos=1573,0
+Size=347,344
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][RenderWindow]
 Pos=0,0
-Size=904,720
+Size=1571,1009
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000001,0
 
 [Window][Renderer3D]
-Pos=906,329
-Size=374,391
+Pos=1573,346
+Size=347,663
 Collapsed=0
 DockId=0x00000006,0
 
 [Docking][Data]
-DockSpace       ID=0x7F00F5A9 Window=0x9A404470 Pos=200,100 Size=1280,720 Split=X
-  DockNode      ID=0x00000002 Parent=0x7F00F5A9 SizeRef=1544,545 CentralNode=1 HiddenTabBar=1 Selected=0x460AEED4
-  DockNode      ID=0x00000003 Parent=0x7F00F5A9 SizeRef=374,545 Split=Y Selected=0xA57AB2C6
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=426,413 Split=Y Selected=0xA57AB2C6
-      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=375,327 Selected=0xA57AB2C6
-      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=375,391 Selected=0xA8145D62
-    DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=426,594 Selected=0xE87781F4
+DockSpace       ID=0x7F00F5A9 Window=0x9A404470 Pos=0,23 Size=1920,1009 Split=X Selected=0x460AEED4
+  DockNode      ID=0x00000001 Parent=0x7F00F5A9 SizeRef=931,720 CentralNode=1 Selected=0x460AEED4
+  DockNode      ID=0x00000002 Parent=0x7F00F5A9 SizeRef=347,720 Split=Y Selected=0xA57AB2C6
+    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=347,310 Split=Y Selected=0xA57AB2C6
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=347,245 Selected=0xA57AB2C6
+      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=347,473 Selected=0xA8145D62
+    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=347,408 Selected=0x8EB3B2B7
 
