--- a/Grapher/Grapher/imgui.ini
+++ b/Grapher/Grapher/imgui.ini
@@ -9,35 +9,43 @@ Size=1920,1009
 Collapsed=0
 
 [Window][Renderer 2D]
-Pos=1573,437
-Size=347,572
+Pos=1557,254
+Size=363,755
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Menu]
-Pos=1573,0
-Size=347,344
+Pos=1557,0
+Size=363,168
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000007,0
 
 [Window][RenderWindow]
 Pos=0,0
-Size=1571,1009
+Size=1555,1009
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Renderer3D]
-Pos=1573,346
-Size=347,663
+Pos=1557,170
+Size=363,839
 Collapsed=0
 DockId=0x00000006,0
 
+[Window][Dear ImGui Demo]
+Pos=1557,123
+Size=363,45
+Collapsed=0
+DockId=0x00000008,0
+
 [Docking][Data]
-DockSpace       ID=0x7F00F5A9 Window=0x9A404470 Pos=0,23 Size=1920,1009 Split=X Selected=0x460AEED4
-  DockNode      ID=0x00000001 Parent=0x7F00F5A9 SizeRef=931,720 CentralNode=1 Selected=0x460AEED4
-  DockNode      ID=0x00000002 Parent=0x7F00F5A9 SizeRef=347,720 Split=Y Selected=0xA57AB2C6
-    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=347,310 Split=Y Selected=0xA57AB2C6
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=347,245 Selected=0xA57AB2C6
-      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=347,473 Selected=0xA8145D62
-    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=347,408 Selected=0x8EB3B2B7
+DockSpace         ID=0x7F00F5A9 Window=0x9A404470 Pos=0,23 Size=1920,1009 Split=X Selected=0x460AEED4
+  DockNode        ID=0x00000001 Parent=0x7F00F5A9 SizeRef=915,720 CentralNode=1 Selected=0x460AEED4
+  DockNode        ID=0x00000002 Parent=0x7F00F5A9 SizeRef=363,720 Split=Y Selected=0xA57AB2C6
+    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=347,252 Split=Y Selected=0xA57AB2C6
+      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=347,120 Split=Y Selected=0xA57AB2C6
+        DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=363,86 Selected=0xA57AB2C6
+        DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=363,32 Selected=0xE87781F4
+      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=347,598 Selected=0xA8145D62
+    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=347,755 Selected=0x8EB3B2B7
 
